--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,61 @@
 requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[project]
+name = "django-oauth-guard"
+version = "0.1.0"
+description = "Enhanced security middleware for Django applications using OAuth authentication"
+readme = "README.md"
+authors = [
+    {name = "Pescheck"}
+]
+license = "MIT"
+requires-python = ">=3.9"
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: Web Environment",
+    "Framework :: Django",
+    "Framework :: Django :: 2.2",
+    "Framework :: Django :: 3.2",
+    "Framework :: Django :: 4.2",
+    "Framework :: Django :: 5.0",
+    "Intended Audience :: Developers",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Internet :: WWW/HTTP",
+    "Topic :: Security",
+]
+dependencies = [
+    "Django>=2.2",
+    "django-allauth>=0.40.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "pytest-django>=4.5.0",
+    "pytest-cov>=3.0.0",
+    "black>=22.0.0",
+    "flake8>=5.0.0",
+    "isort>=5.0.0",
+    "tox>=4.0.0",
+]
+test = [
+    "pytest>=7.0.0",
+    "pytest-django>=4.5.0",
+    "pytest-cov>=3.0.0",
+    "tox>=4.0.0",
+]
+
+[project.urls]
+Homepage = "https://github.com/pescheck/django-oauth-guard"
+Issues = "https://github.com/pescheck/django-oauth-guard/issues"
+
 [tool.black]
 line-length = 88
 target-version = ["py39", "py310", "py311", "py312"]
