--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,9 @@ version = attr: django_oauth_guard.__version__
 description = Enhanced security middleware for Django applications using OAuth authentication
 long_description = file: README.md
 long_description_content_type = text/markdown
-author = 
-author_email = 
-url = https://github.com/django-oauth-guard
+author = Pescheck
+author_email = pescheck@example.com
+url = https://github.com/pescheck/django-oauth-guard
 classifiers =
     Development Status :: 4 - Beta
     Environment :: Web Environment
@@ -42,8 +42,6 @@ install_requires =
 exclude =
     tests
 
-[bdist_wheel]
-universal = 1
 
 [flake8]
 max-line-length = 88
