Fixed tox issue

--- a/tox.ini
+++ b/tox.ini
@@ -8,21 +8,25 @@ isolated_build = True
 
 [gh-actions]
 python =
-    3.9: py39
-    3.10: py310
-    3.11: py311
-    3.12: py312
+    3.9: py39-django42
+    3.10: py310-django42
+    3.11: py311-django42
+    3.12: py312-django42
 
 [testenv]
 deps =
     pytest
     pytest-django
     pytest-cov
+    requests
+    PyJWT
+    cryptography
     django-allauth>=0.40.0
     django22: Django>=2.2,<3.0
     django32: Django>=3.2,<4.0
     django42: Django>=4.2,<5.0
     django50: Django>=5.0,<5.1
+usedevelop = True
 commands =
     pytest --cov=django_oauth_guard --cov-report=xml {posargs:django_oauth_guard/tests}
 
