--- a/tox.ini
+++ b/tox.ini
@@ -4,14 +4,25 @@ envlist =
     py310-django{32,42,50}
     py311-django{32,42,50}
     py312-django{42,50}
+    py3.9-django{2.2,3.2,4.2}
+    py3.10-django{3.2,4.2,5.0}
+    py3.11-django{3.2,4.2,5.0}
+    py3.12-django{4.2,5.0}
 isolated_build = True
 
 [gh-actions]
 python =
-    3.9: py39-django42
-    3.10: py310-django42
-    3.11: py311-django42
-    3.12: py312-django42
+    3.9: py3.9
+    3.10: py3.10
+    3.11: py3.11
+    3.12: py3.12
+
+[gh-actions:env]
+DJANGO_VERSION =
+    2.2: django2.2
+    3.2: django3.2
+    4.2: django4.2
+    5.0: django5.0
 
 [testenv]
 deps =
@@ -26,6 +37,10 @@ deps =
     django32: Django>=3.2,<4.0
     django42: Django>=4.2,<5.0
     django50: Django>=5.0,<5.1
+    django2.2: Django>=2.2,<3.0
+    django3.2: Django>=3.2,<4.0
+    django4.2: Django>=4.2,<5.0
+    django5.0: Django>=5.0,<5.1
 usedevelop = True
 commands =
     pytest --cov=django_oauth_guard --cov-report=xml {posargs:django_oauth_guard/tests}
