Fixed and removed old djanog

--- a/tox.ini
+++ b/tox.ini
@@ -1,26 +1,24 @@
 [tox]
 envlist =
-    py39-django{22,32,42}
-    py310-django{32,42,50}
-    py311-django{32,42,50}
+    py39-django{42}
+    py310-django{42,50}
+    py311-django{42,50}
     py312-django{42,50}
-    py3.9-django{2.2,3.2,4.2}
-    py3.10-django{3.2,4.2,5.0}
-    py3.11-django{3.2,4.2,5.0}
+    py3.9-django{4.2}
+    py3.10-django{4.2,5.0}
+    py3.11-django{4.2,5.0}
     py3.12-django{4.2,5.0}
 isolated_build = True
 
 [gh-actions]
 python =
-    3.9: py3.9
-    3.10: py3.10
-    3.11: py3.11
-    3.12: py3.12
+    3.9: py39,py3.9
+    3.10: py310,py3.10
+    3.11: py311,py3.11
+    3.12: py312,py3.12
 
 [gh-actions:env]
-DJANGO_VERSION =
-    2.2: django2.2
-    3.2: django3.2
+DJANGO =
     4.2: django4.2
     5.0: django5.0
 
@@ -33,12 +31,8 @@ deps =
     PyJWT
     cryptography
     django-allauth>=0.40.0
-    django22: Django>=2.2,<3.0
-    django32: Django>=3.2,<4.0
     django42: Django>=4.2,<5.0
     django50: Django>=5.0,<5.1
-    django2.2: Django>=2.2,<3.0
-    django3.2: Django>=3.2,<4.0
     django4.2: Django>=4.2,<5.0
     django5.0: Django>=5.0,<5.1
 usedevelop = True
@@ -50,10 +44,7 @@ DJANGO_SETTINGS_MODULE = tests.settings
 python_files = test_*.py
 testpaths = django_oauth_guard/tests
 
-[flake8]
-max-line-length = 88
-extend-ignore = E203, W503
-exclude = .git,__pycache__,docs/conf.py,old,build,dist
+# Flake8 configuration removed - now using ruff
 
 [coverage:run]
 source = django_oauth_guard
