--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,17 +12,8 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.9', '3.10', '3.11', '3.12']
-        django-version: ['2.2', '3.2', '4.2', '5.0']
+        django-version: ['4.2', '5.0']
         exclude:
-          # Python 3.12 doesn't support Django 2.2
-          - python-version: '3.12'
-            django-version: '2.2'
-          # Python 3.12 doesn't support Django 3.2
-          - python-version: '3.12'
-            django-version: '3.2'
-          # Python 3.11 doesn't support Django 2.2
-          - python-version: '3.11'
-            django-version: '2.2'
           # Python 3.9 doesn't support Django 5.0
           - python-version: '3.9'
             django-version: '5.0'
@@ -43,8 +34,8 @@ jobs:
     - name: Test with tox
       run: tox
       env:
-        PYTHON_VERSION: ${{ matrix.python-version }}
-        DJANGO_VERSION: ${{ matrix.django-version }}
+        PYTHON: ${{ matrix.python-version }}
+        DJANGO: ${{ matrix.django-version }}
         
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
@@ -62,13 +53,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 black isort
+        python -m pip install ruff
         
-    - name: Check formatting with black
-      run: black --check django_oauth_guard/
-      
-    - name: Check imports with isort
-      run: isort --check django_oauth_guard/
-      
-    - name: Lint with flake8
-      run: flake8 django_oauth_guard/
+    - name: Lint and format with ruff
+      run: |
+        ruff check django_oauth_guard/
+        ruff format --check django_oauth_guard/
