--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,6 @@ classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Web Environment",
     "Framework :: Django",
-    "Framework :: Django :: 2.2",
-    "Framework :: Django :: 3.2",
     "Framework :: Django :: 4.2",
     "Framework :: Django :: 5.0",
     "Intended Audience :: Developers",
@@ -32,7 +30,7 @@ classifiers = [
     "Topic :: Security",
 ]
 dependencies = [
-    "Django>=2.2",
+    "Django>=4.2",
     "django-allauth>=0.40.0",
 ]
 
@@ -41,9 +39,7 @@ dev = [
     "pytest>=7.0.0",
     "pytest-django>=4.5.0",
     "pytest-cov>=3.0.0",
-    "black>=22.0.0",
-    "flake8>=5.0.0",
-    "isort>=5.0.0",
+    "ruff>=0.3.0",
     "tox>=4.0.0",
 ]
 test = [
@@ -57,32 +53,46 @@ test = [
 Homepage = "https://github.com/pescheck/django-oauth-guard"
 Issues = "https://github.com/pescheck/django-oauth-guard/issues"
 
-[tool.black]
+[tool.ruff]
 line-length = 88
-target-version = ["py39", "py310", "py311", "py312"]
-include = '\.pyi?$'
-exclude = '''
-/(
-    \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | _build
-  | buck-out
-  | build
-  | dist
-)/
-'''
+target-version = "py39"
+exclude = [
+    ".git",
+    ".hg",
+    ".mypy_cache",
+    ".tox",
+    ".venv",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+]
 
-[tool.isort]
-profile = "black"
-line_length = 88
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-ensure_newline_before_comments = true
+[tool.ruff.lint]
+select = [
+    "E",   # pycodestyle errors
+    "F",   # pyflakes
+    "I",   # isort
+    "W",   # pycodestyle warnings
+    "C90", # mccabe
+    "N",   # pep8-naming
+    "B",   # flake8-bugbear
+    "UP",  # pyupgrade
+    "C4",  # flake8-comprehensions
+    "RUF", # ruff specific rules
+]
+ignore = [
+    "E203", # Whitespace before ':'
+    "W503", # Line break before binary operator
+]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+line-ending = "auto"
+
+[tool.ruff.isort]
+known-first-party = ["django_oauth_guard"]
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "tests.settings"
