--- a/setup.cfg
+++ b/setup.cfg
@@ -11,12 +11,6 @@ classifiers =
     Development Status :: 4 - Beta
     Environment :: Web Environment
     Framework :: Django
-    Framework :: Django :: 2.2
-    Framework :: Django :: 3.0
-    Framework :: Django :: 3.1
-    Framework :: Django :: 3.2
-    Framework :: Django :: 4.0
-    Framework :: Django :: 4.1
     Framework :: Django :: 4.2
     Framework :: Django :: 5.0
     Intended Audience :: Developers
@@ -35,7 +29,7 @@ classifiers =
 packages = find:
 python_requires = >=3.9
 install_requires =
-    Django>=2.2
+    Django>=4.2
     django-allauth>=0.40.0
 
 [options.packages.find]
@@ -43,10 +37,7 @@ exclude =
     tests
 
 
-[flake8]
-max-line-length = 88
-extend-ignore = E203, W503
-exclude = .git,__pycache__,docs/conf.py,old,build,dist
+# Flake8 configuration removed - now using ruff
 
 [coverage:run]
 source = django_oauth_guard
