--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         python-version: ['3.9', '3.10', '3.11', '3.12']
         django-version: ['4.2', '5.0']
@@ -32,13 +33,11 @@ jobs:
         python -m pip install tox tox-gh-actions
         
     - name: Test with tox
-      run: tox
-      env:
-        PYTHON: ${{ matrix.python-version }}
-        DJANGO: ${{ matrix.django-version }}
+      run: python -m tox -e py$(echo ${{ matrix.python-version }} | tr -d '.')-django$(echo ${{ matrix.django-version }} | tr -d '.')
         
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
+      if: success()
 
   lint:
     runs-on: ubuntu-latest
@@ -53,7 +52,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install ruff
+        python -m pip install ruff==0.3.0
         
     - name: Lint and format with ruff
       run: |
