--- a/tox.ini
+++ b/tox.ini
@@ -1,26 +1,25 @@
 [tox]
 envlist =
-    py39-django{42}
-    py310-django{42,50}
-    py311-django{42,50}
-    py312-django{42,50}
-    py3.9-django{4.2}
-    py3.10-django{4.2,5.0}
-    py3.11-django{4.2,5.0}
-    py3.12-django{4.2,5.0}
+    py39-django42
+    py310-django42
+    py310-django50
+    py311-django42
+    py311-django50
+    py312-django42
+    py312-django50
 isolated_build = True
 
 [gh-actions]
 python =
-    3.9: py39,py3.9
-    3.10: py310,py3.10
-    3.11: py311,py3.11
-    3.12: py312,py3.12
+    3.9: py39
+    3.10: py310
+    3.11: py311
+    3.12: py312
 
 [gh-actions:env]
 DJANGO =
-    4.2: django4.2
-    5.0: django5.0
+    4.2: django42
+    5.0: django50
 
 [testenv]
 deps =
@@ -33,8 +32,6 @@ deps =
     django-allauth>=0.40.0
     django42: Django>=4.2,<5.0
     django50: Django>=5.0,<5.1
-    django4.2: Django>=4.2,<5.0
-    django5.0: Django>=5.0,<5.1
 usedevelop = True
 commands =
     pytest --cov=django_oauth_guard --cov-report=xml {posargs:django_oauth_guard/tests}
