--- a/tox.ini
+++ b/tox.ini
@@ -7,17 +7,25 @@ envlist =
     py311-django50
     py312-django42
     py312-django50
+    # Also include variations with dots in the Python version
+    py3.9-django42
+    py3.10-django42
+    py3.10-django50
+    py3.11-django42
+    py3.11-django50
+    py3.12-django42
+    py3.12-django50
 isolated_build = True
 
 [gh-actions]
 python =
-    3.9: py39
-    3.10: py310
-    3.11: py311
-    3.12: py312
+    3.9: py39,py3.9
+    3.10: py310,py3.10
+    3.11: py311,py3.11
+    3.12: py312,py3.12
 
 [gh-actions:env]
-DJANGO =
+DJANGO_VERSION =
     4.2: django42
     5.0: django50
 
